--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "start:headless": "dbus-run-session -- xvfb-run --server-args='-screen 0 1280x720x24' -- npx electron --no-sandbox --disable-gpu .",
+  "start:headless": "./dev/start-headless.sh",
     "lint": "eslint .",
     "format": "prettier --write ."
   },
