--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "run",
   "version": "1.0.0",
@@ -7,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-  "start:headless": "./dev/start-headless.sh",
+    "start:headless": "./dev/start-headless.sh",
     "lint": "eslint .",
     "format": "prettier --write ."
   },
@@ -16,6 +15,7 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "electron": "^28.0.0"
+    "electron": "^28.3.3",
+    "live-server": "^1.2.2"
   }
 }
