--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "run",
   "version": "1.0.0",
-  "description": "",
-  "main": "electron-main.js",
+  "description": "Run The World overlay",
+  "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "start:headless": "./dev/start-headless.sh",
-    "lint": "eslint .",
-    "format": "prettier --write ."
+    "dev": "nodemon main.js"
   },
-  "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
-  "devDependencies": {
+  "dependencies": {
+    "concurrently": "^8.2.2",
     "electron": "^28.3.3",
-    "live-server": "^1.2.2"
+    "express": "^4.19.2",
+    "ws": "^8.18.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
