--- a/effects/effect-mapping.json
+++ b/effects/effect-mapping.json
@@ -1,10 +1,21 @@
 {
-  "defaultMood": "dreamlike",
-  "intervalMs": { "min": 9000, "max": 14000 },
+  "defaultMood": "dreamcore",
+  "labels": {
+    "dreamcore": "Dreamcore",
+    "ambient": "Ambient",
+    "hype": "Hype",
+    "rare": "Rare Drop"
+  },
   "moods": {
-    "dreamlike": ["softPulse", "scanline"]
+    "dreamcore": ["softPulse", "scanline"],
+    "ambient": ["softPulse", "scanline"],
+    "hype": ["softPulse", "scanline"],
+    "rare": ["softPulse", "scanline"]
   },
   "zones": {
-    "dreamlike": ["center", "topLeft", "bottom"]
+    "dreamcore": ["center", "topLeft", "bottom"],
+    "ambient": ["center", "topLeft", "bottom"],
+    "hype": ["center", "topLeft", "bottom"],
+    "rare": ["center", "topLeft", "bottom"]
   }
 }
