--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^8.2.2",
     "electron": "^28.3.3",
     "express": "^4.19.2",
+    "winston": "^3.14.2",
     "ws": "^8.18.0"
   },
   "devDependencies": {
