--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@pixi/filter-glitch": "^5.0.5",
+    "@pixi/filter-godray": "^5.0.5",
     "concurrently": "^8.2.2",
     "electron": "^28.3.3",
+    "electron-log": "^5.1.2",
     "express": "^4.19.2",
+    "pixi.js": "^8.4.1",
     "winston": "^3.14.2",
     "ws": "^8.18.0"
   },
