--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@pixi/filter-glitch": "^5.0.5",
     "@pixi/filter-godray": "^5.0.5",
     "concurrently": "^8.2.2",
+    "electron-launcher": "^1.0.0",
     "electron": "^28.3.3",
     "electron-log": "^5.1.2",
     "express": "^4.19.2",
@@ -32,8 +33,9 @@
     "nodemon": "^3.1.7"
   },
   "build": {
-    "appId": "com.run.app",
     "productName": "Run The World",
+    "appId": "com.example.rtw",
+    "artifactName": "RunTheWorld-${version}.${ext}",
     "directories": {
       "output": "dist"
     },
