--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "electron .",
+    "start:headless": "./dev/start-headless.sh",
     "dev": "nodemon main.js",
     "build": "electron-builder",
     "dist": "electron-builder --win",
@@ -19,8 +20,8 @@
   "dependencies": {
     "@pixi/filter-glitch": "^5.0.5",
     "@pixi/filter-godray": "^5.0.5",
+    "auto-launch": "^5.0.6",
     "concurrently": "^8.2.2",
-    "electron-launcher": "^1.0.0",
     "electron": "^28.3.3",
     "electron-log": "^5.1.2",
     "express": "^4.19.2",
