Add Google Fit WebSocket bridge and heart rate HUD

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,10 @@ coverage/
 .env
 .env.*
 !.env.example
+client_secrets.json
+token.json
+step-bridge/client_secrets.json
+step-bridge/token.json
 
 # Electron artifacts
 *.dmg
