--- a/step-bridge/requirements.txt
+++ b/step-bridge/requirements.txt
@@ -2,3 +2,7 @@ websockets>=12.0
 
 # Optional dependency for BLE wearable integration
 bleak>=0.22.3
+google-auth>=2.29.0
+google-auth-oauthlib>=1.2.0
+google-api-python-client>=2.125.0
+aiohttp>=3.9.5
