--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "express": "^4.19.2",
     "pixi.js": "^8.4.1",
     "winston": "^3.14.2",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "googleapis": "^131.0.0"
   },
   "devDependencies": {
     "electron-builder": "^24.13.3",
