--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "release:mac": "electron-builder --mac",
     "release:win": "electron-builder --win",
     "release:linux": "electron-builder --linux",
-    "release:all": "electron-builder -mwl"
+    "release:all": "electron-builder -mwl",
+    "create-noodle": "node scripts/createAndUpload.js"
   },
   "author": "",
   "license": "ISC",
@@ -29,7 +30,12 @@
     "pixi.js": "^8.4.1",
     "winston": "^3.14.2",
     "ws": "^8.18.0",
-    "googleapis": "^131.0.0"
+    "googleapis": "^131.0.0",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
+    "backblaze-b2": "^2.0.4",
+    "dotenv": "^16.4.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "electron-builder": "^24.13.3",
