--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,8 @@
     "ajv-formats": "^2.1.1",
     "backblaze-b2": "^2.3.1",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "tar": "^6.2.0",
+    "ws": "^8.14.2"
   }
 }
