--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "backblaze-b2": "^2.0.4",
-    "dotenv": "^16.4.5",
-    "uuid": "^9.0.1"
+    "dotenv": "^16.4.5"
   },
   "devDependencies": {
     "electron-builder": "^24.13.3",
