--- a/package.json
+++ b/package.json
@@ -23,18 +23,19 @@
   "dependencies": {
     "@pixi/filter-glitch": "^5.0.5",
     "@pixi/filter-godray": "^5.0.5",
-    "auto-launch": "^5.0.6",
-    "concurrently": "^8.2.2",
-    "electron-log": "^5.1.2",
-    "express": "^4.19.2",
-    "pixi.js": "^8.4.1",
-    "winston": "^3.14.2",
-    "ws": "^8.18.0",
-    "googleapis": "^131.0.0",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
+    "archiver": "^6.0.1",
+    "auto-launch": "^5.0.6",
     "backblaze-b2": "^2.0.4",
-    "dotenv": "^16.4.5"
+    "concurrently": "^8.2.2",
+    "dotenv": "^16.4.5",
+    "electron-log": "^5.1.2",
+    "express": "^4.19.2",
+    "googleapis": "^131.0.0",
+    "pixi.js": "^8.4.1",
+    "winston": "^3.14.2",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "electron-builder": "^24.13.3",
