--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "electron-log": "^5.1.2",
     "express": "^4.19.2",
     "googleapis": "^131.0.0",
+    "parquetjs-lite": "^0.11.8",
     "pixi.js": "^8.4.1",
+    "snappyjs": "^0.6.1",
     "winston": "^3.14.2",
     "ws": "^8.18.0"
   },
