--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
     "electron-log": "^5.1.2",
     "express": "^4.19.2",
     "googleapis": "^131.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "pixi.js": "^8.4.1",
     "winston": "^3.14.2",
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.5",
     "electron-builder": "^24.13.3",
     "nodemon": "^3.1.7"
   },
