--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "release:win": "electron-builder --win",
     "release:linux": "electron-builder --linux",
     "release:all": "electron-builder -mwl",
-    "create-noodle": "node scripts/createAndUpload.js"
+    "create-noodle": "node scripts/createAndUpload.js",
+    "test": "vitest"
   },
   "author": "",
   "license": "ISC",
@@ -43,7 +44,10 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.5",
     "electron-builder": "^24.13.3",
-    "nodemon": "^3.1.7"
+    "nodemon": "^3.1.7",
+    "@types/node": "^22.10.1",
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.4"
   },
   "build": {
     "productName": "Run The World",
