--- a/rv-app/tsconfig.json
+++ b/rv-app/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "// _dev": "Build rv-app using:  npx tsc -p rv-app  → output to public/build/. Serve via http-server or Express.",
   "compilerOptions": {
     "target": "ES2020",
     "module": "ES2020",
