Add proxy dev server and clip library integrations

--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     ],
     "extraResources": [
       "hallucinations/**/*",
+      "rv-app/public/**",
       {
         "from": "rv-app/public",
         "to": "rv-app/public"
