--- a/package.json
+++ b/package.json
@@ -42,25 +42,37 @@
     "electron-log": "^5.1.2",
     "express": "^4.19.2",
     "googleapis": "^131.0.0",
+    "http-proxy-middleware": "^3.0.3",
+    "pixi.js": "^8.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "pixi.js": "^8.4.1",
     "winston": "^3.14.2",
-    "ws": "^8.18.0",
-    "http-proxy-middleware": "^3.0.3"
+    "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.5",
+    "electron": "^28.3.3",
     "electron-builder": "^24.13.3",
-    "nodemon": "^3.1.7",
     "http-server": "^14.1.1",
-    "@types/node": "^22.10.1",
+    "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
-    "vitest": "^2.1.4"
+    "vitest": "^4.0.12"
   },
   "build": {
+    "files": [ 
+      "main.js", 
+      "preload.js", 
+      "renderer/**/*", 
+      "rv-app/public/**/*", 
+      "src/**/*", 
+      "package.json" 
+    ], 
+    "extraResources": [ 
+      { "from": "rv-app/public", "to": "rv" } 
+    ],
     "productName": "Run The World",
     "appId": "com.example.rtw",
     "artifactName": "RunTheWorld-${version}.${ext}",
