--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "dev:electron": "nodemon main.js",
     "rv:build": "tsc -p rv-app",
     "rv:serve": "http-server rv-app/public -p 4173",
+    "passport:dev": "vite --config passport/vite.config.ts",
+    "passport:build": "vite build --config passport/vite.config.ts",
     "build": "electron-builder",
     "dist": "electron-builder --win",
     "release:mac": "electron-builder --mac",
@@ -58,7 +60,9 @@
     "@types/node": "^22.10.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
-    "vitest": "^2.1.4"
+    "vitest": "^2.1.4",
+    "@vitejs/plugin-react": "^5.2.0",
+    "vite": "^6.0.2"
   },
   "build": {
     "productName": "Run The World",
