--- a/package.json
+++ b/package.json
@@ -61,7 +61,10 @@
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
-    "vitest": "^2.1.4"
+    "vitest": "^2.1.4",
+    "@vitejs/plugin-react": "^5.2.0",
+    "vite": "^6.0.2"
+    "vitest": "^4.0.12"
   },
   "build": {
     "files": [ 
