--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "typescript": "^5.6.3",
     "vitest": "^2.1.4",
     "@vitejs/plugin-react": "^5.2.0",
-    "vite": "^6.0.2"
+    "vite": "^6.0.2",
     "vitest": "^4.0.12"
   },
   "build": {
