--- a/package.json
+++ b/package.json
@@ -61,23 +61,11 @@
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3",
-    "vitest": "^2.1.4",
+    "vitest": "^4.0.12",
     "@vitejs/plugin-react": "^5.2.0",
-    "vite": "^6.0.2",
-    "vitest": "^4.0.12"
+    "vite": "^6.0.2"
   },
   "build": {
-    "files": [ 
-      "main.js", 
-      "preload.js", 
-      "renderer/**/*", 
-      "rv-app/public/**/*", 
-      "src/**/*", 
-      "package.json" 
-    ], 
-    "extraResources": [ 
-      { "from": "rv-app/public", "to": "rv" } 
-    ],
     "productName": "RunnyVision",
     "appId": "com.runnyvision.app",
     "artifactName": "RunnyVision-${version}.${ext}",
