--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "strict": false,
+    "strictNullChecks": true,
     "types": ["node", "vitest/globals"],
     "baseUrl": "."
   },
