--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,9 @@
   "dependencies": {
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
-    "backblaze-b2": "^2.3.1",
+    "archiver": "^6.0.1",
+    "backblaze-b2": "^1.7.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "tar": "^6.2.0",
