--- a/package.json
+++ b/package.json
@@ -5,24 +5,14 @@
   "description": "RunnyVision overlay",
   "main": "main.js",
   "scripts": {
-    "start": "electron .",
-    "start:browser": "node dev/hud-dev-server.js",
-    "start:headless": "./dev/start-headless.sh",
-    "start:gui": "./dev/start-gui.sh",
     "dev": "node dev/hud-dev-server.js",
-    "dev:electron": "nodemon main.js",
-    "rv:build": "tsc -p rv-app",
-    "rv:serve": "http-server rv-app/public -p 4173",
-    "passport:dev": "vite --config passport/vite.config.ts",
-    "passport:build": "vite build --config passport/vite.config.ts",
-    "build": "electron-builder",
-    "dist": "electron-builder --win",
-    "release:mac": "electron-builder --mac",
-    "release:win": "electron-builder --win",
-    "release:linux": "electron-builder --linux",
-    "release:all": "electron-builder -mwl",
-    "create-noodle": "node scripts/createAndUpload.js",
-    "test": "vitest"
+    "rv:watch": "tsc -p rv-app --watch",
+    "rv:api": "ts-node src/server.ts",
+    "passport:dev": "cd passport && npm run dev",
+    "dev:full": "concurrently \"npm run dev\" \"npm run rv:watch\" \"npm run rv:api\"",
+    "build:rv": "tsc -p rv-app",
+    "backend": "node start-backend.js api",
+    "backend:legacy": "node start-backend.js legacy"
   },
   "author": "",
   "license": "ISC",
